add student endpoints and improve coverage