@@ -11,8 +11,10 @@ import com.roadToMaster.UniversityManagerApi.courses.infrastrucure.persistence.S
 import com.roadToMaster.UniversityManagerApi.courses.infrastrucure.persistence.SubjectRepository;
 import com.roadToMaster.UniversityManagerApi.courses.infrastrucure.persistence.entity.CoursesEntityMapper;
 import com.roadToMaster.UniversityManagerApi.courses.infrastrucure.persistence.entity.SubjectEntity;
+import com.roadToMaster.UniversityManagerApi.users.domain.RoleEnum;
 import com.roadToMaster.UniversityManagerApi.users.infrastructure.persistence.UserRepository;
 import com.roadToMaster.UniversityManagerApi.users.infrastructure.persistence.entity.UserEntityMapper;
+import org.hibernate.SessionFactory;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -21,15 +23,15 @@ import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
 
 import javax.persistence.EntityManager;
-import java.util.Collections;
+import javax.transaction.Transactional;
 import java.util.List;
 import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-public class CreateSubjectTest extends ComponentTestBase {
+public class EnrollStudentToSubjectTest extends ComponentTestBase {
 
-  private static final String SUBJECT_URL = "/subject";
+  private static final String ENROLL_STUDENT_URL = "/student/{username}/subject/{subjectId}";
 
   @Autowired
   private CoursesEntityMapper entityMapper;
@@ -50,7 +52,7 @@ public class CreateSubjectTest extends ComponentTestBase {
   private UserRepository userRepository;
 
   @Autowired
-  private EntityManager entityManager;
+  private SessionFactory sessionFactory;
 
   @AfterEach
   public void teardown() {
@@ -61,26 +63,26 @@ public class CreateSubjectTest extends ComponentTestBase {
   }
 
   @Test
-  public void ShouldCreateSubject() {
-    var course = entityMapper.courseToDomain(courseRepository.save(entityMapper.courseToEntity(CourseMother.validCourse())), Collections.emptyList());
-    var professor = UserMother.buildValid();
+  public void shouldEnrollStudentToSubject() {
+    var courseEntity = courseRepository.save(entityMapper.courseToEntity(CourseMother.validCourse()));
+    var course = entityMapper.courseToDomain(courseEntity, List.of());
+    var userEntity = userRepository.save(userEntityMapper.userToEntity(UserMother.buildValid()));
+    var professor = userEntityMapper.userToDomain(userEntity);
     var schedules = List.of(ScheduleMother.buildSchedule(0, 10));
-    var expectedSubject = SubjectMother.validSubject(professor, schedules, course);
+    var subjectEntity = subjectRepository.save(entityMapper.subjectToEntity(SubjectMother.validSubject(professor, List.of(), course), courseEntity));
+    var expectedSubject = entityMapper.subjectToDomain(subjectEntity, schedules);
 
-    userRepository.save(userEntityMapper.userToEntity(professor));
-    courseRepository.save(entityMapper.courseToEntity(course));
+    var studentEntity = userRepository.save(userEntityMapper.userToEntity(UserMother.buildValidWithRole(RoleEnum.STUDENT)));
+    var student = userEntityMapper.userToDomain(studentEntity);
 
     var request = SubjectRequestMother.buildSubjectRequest(expectedSubject);
 
-    var response = restTemplate.exchange(SUBJECT_URL, HttpMethod.POST, new HttpEntity<>(request),
-        Void.class, course.getName());
+    var response = restTemplate.exchange(ENROLL_STUDENT_URL, HttpMethod.PUT, new HttpEntity<>(request),
+        Void.class, student.getUsername(), expectedSubject.getId());
 
-    var savedSubject = subjectRepository.findByProfessorUsername(professor.getUsername());
-    var savedSchedules = scheduleRepository.findBySubjectId(savedSubject.stream().map(SubjectEntity::getId).collect(Collectors.toList()));
-    assertThat(response.getStatusCode()).isEqualTo(HttpStatus.CREATED);
-    assertThat(savedSubject).first().usingRecursiveComparison()
-        .ignoringFields("course", "professor", "schedules", "createdDate", "active", "updatedDate", "id", "students").isEqualTo(expectedSubject);
-    assertThat(savedSchedules.stream().map(entityMapper::scheduleToDomain).collect(Collectors.toList()))
-        .usingRecursiveComparison().ignoringFields("id").isEqualTo(schedules);
+    var savedSubject = subjectRepository.findAllByStudent(student.getId());
+    assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
+    assertThat(savedSubject).first()
+        .extracting("id").isEqualTo(expectedSubject.getId());
   }
 }
